@@ -32,11 +32,22 @@
 import sys
 import os
 import re
-import db
 import string
 import mgi_utils
 import loadlib
 import time
+
+try:
+    if os.environ['DB_TYPE'] == 'postgres':
+        import pg_db
+        db = pg_db
+        db.setTrace()
+        db.setAutoTranslateBE()
+    else:
+        import db
+
+except:
+    import db
 
 TAB = '\t'
 CRT = '\n'
