@@ -50,8 +50,19 @@ import Set
 
 import mgi_utils
 import loadlib
-import db
 import clusterize
+
+try:
+    if os.environ['DB_TYPE'] == 'postgres':
+        import pg_db
+        db = pg_db
+        db.setTrace()
+        db.setAutoTranslateBE()
+    else:
+        import db
+
+except:
+    import db
 
 ####################################
 #
